Upgrade to spring 3